- New feature: CR#118 Gameview: Make tags clickable
- New feature: Auto analysis writes engine's name into final annotation
- New feature: Asynchronous Searching
- New feature: Allow several unsaved games at the same time (one per db)
- New feature: Allow disabling menu icons
- New feature: Allow constant move indicator
- New feature: #117 Export screenshot to file

- Changed: Pinned games have infinite analysis depth
- Changed: Dialogs remember sizes and screen positions
- Changed: CR#127 New navigation buttons order.
- Changed: board tabs carry name of db instead of numbers
- Changed: Auto analysis won't add move at end of game
- Changed: Assignment of CTRL+C key to direct pasting of PGN
- Changed: #121 Thicker, more visible arrows and colored squares
- Changed: Show game title now in three lines
- Changed: Copy of a game via context menu copies selected game

- Bugfix: Nags with bishops now exclusive
- Bugfix: CR#205 line does not resume from the same indentation.
- Bugfix: CR#204 Database is not released from memory upon closing
- Bugfix: Annotations were not handled correctly when compacting database
- Bugfix: Analysis/"Mate in" has inconsistent color
- Bugfix: EGT Time annotation broken

February 2014: Version 1.1.0

- New feature: Traning with Toolbar Icon
- New feature: Play out game against engine
- New feature: Limit time that engines may use for analysis
- New feature: Auto Responder for training openings etc.
- New feature: Show name of opening in addition to ECO-Code
- New feature: Use any open database as source for Opening Tree
- New feature: Opening Tree with Filter as Source
- New feature: Splitter in Detail Views
- New Feature: CR#6 Configurable shortcuts
- New feature: Visual indicator for results
- New feature: Show location of AppSettings in About Dlg
- New feature: CR#108 Lock engine to current position
- New feature: Null moves at unusual positions
- New feature: Incremental Opening Tree
- New feature: Adjust columns in list views